# flask-hospital

./: .gitignore  .pre-commit-config.yaml  flask_hospital_eer_diagram.mwb  flask_hospital_eer_diagram.mwb.bak  flask_hospital_eer_diagram_copy.mwb  justfile  pyproject.toml  tables_creation.sql
src/flask_hospital/: __init__.py  __main__.py  config.py  db.py  utils.py
src/flask_hospital/models/: administrative.py  admission.py  atention.py  bill.py  bill_state.py  blood_type.py  dispensing.py  doctor.py  doctor_specialty.py  gender.py  history.py  identification.py  medicine.py  medicine_presentation.py  nurse.py  patient.py  payment_method.py  presentation.py  priority_level.py  procedure.py  procedure_atention.py  role.py  specialty.py  triage.py  turn.py  turn_state.py  user.py
src/flask_hospital/routes/index/: routes.py
tests/: test_smoke.py
